# data_designer_lambda_column

./: .gitignore  example_usage.py  pyproject.toml
src/data_designer_lambda_column/: plugin.py
